Add workbox, fix details

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,11 +1,12 @@
 {
+  "app.title": "Tic Tac Toe",
+  "back": "Back",
   "home.buttons.play": "Play",
   "home.buttons.options": "Options",
   "home.buttons.credits": "Credits",
-  "home.buttons.quit": "Quit",
   "difficulty.easy": "Easy",
   "difficulty.medium": "Medium",
-  "difficulty.hard": "Hard",
+  "difficulty.hard": "Impossible",
   "mode.one-players": "1 player",
   "mode.two-players": "2 players",
   "end.single-player.win": "Winner!",
